--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -99,5 +99,15 @@
       </div>
     </div>
   </div>
+  <script>
+
+const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.get("error") === "blocked") {
+        Swal.fire("Access Denied", "Your account is blocked. Contact support.", "error");
+    }
+
+
+
+  </script>
 </body>
 </html>
