--- a/views/user/signUp.ejs
+++ b/views/user/signUp.ejs
@@ -168,6 +168,20 @@ document.addEventListener('DOMContentLoaded', function () {
     }
   });
 });
+
+
+
+
+
+
+const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.get("error") === "blocked") {
+        Swal.fire("Access Denied", "Your account is blocked. Contact support.", "error");
+    }
+
+
+
+  
 </script>
 
 </body>
