--- a/views/admin/productAdd.ejs
+++ b/views/admin/productAdd.ejs
@@ -222,7 +222,7 @@ document.addEventListener('DOMContentLoaded', function () {
     const maxFileSize = 5 * 1024 * 1024; 
     const allowedFormats = ['image/jpeg', 'image/png', 'image/jpg'];
     const maxImages = 4; 
-
+    
 
     const previewContainers = document.querySelectorAll('.preview-container');
     const cropperModal = new bootstrap.Modal(document.getElementById('cropperModal'));
@@ -339,7 +339,7 @@ form.addEventListener('submit', async (event) => {
     event.preventDefault();
     let isValid = true;
 
-   
+    const invalidInputRegex = /^[.\s]+$/;
     document.getElementById('name-error').textContent = '';
     document.getElementById('price-error').textContent = '';
     document.getElementById('color-size-error').textContent = '';
@@ -349,7 +349,7 @@ form.addEventListener('submit', async (event) => {
     const productName = document.getElementById('productName');
     const nameError = document.getElementById('name-error');
 
-    if (!productName.value.trim()) {
+    if (!productName.value.trim()||invalidInputRegex.test()) {
         isValid = false;
         nameError.textContent = 'Product Name is required.';
         nameError.style.color = 'red';
